docs/v0.2.0a51/_sources/reference/_autosummary/hpcflow.sdk.persistence.pending.PendingChanges.rst.txt
hpcflow.sdk.persistence.pending.PendingChanges
==============================================

.. currentmodule:: hpcflow.sdk.persistence.pending

.. autoclass:: PendingChanges
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~PendingChanges.clear_add_EARs
      ~PendingChanges.clear_add_elem_IDs
      ~PendingChanges.clear_add_elem_iter_EAR_IDs
      ~PendingChanges.clear_add_elem_iter_IDs
      ~PendingChanges.clear_add_elem_iters
      ~PendingChanges.clear_add_element_sets
      ~PendingChanges.clear_add_elements
      ~PendingChanges.clear_add_files
      ~PendingChanges.clear_add_loops
      ~PendingChanges.clear_add_parameters
      ~PendingChanges.clear_add_submission_attempts
      ~PendingChanges.clear_add_submissions
      ~PendingChanges.clear_add_tasks
      ~PendingChanges.clear_add_template_components
      ~PendingChanges.clear_set_EAR_ends
      ~PendingChanges.clear_set_EAR_skips
      ~PendingChanges.clear_set_EAR_starts
      ~PendingChanges.clear_set_EAR_submission_indices
      ~PendingChanges.clear_set_jobscript_job_ID
      ~PendingChanges.clear_set_jobscript_submit_time
      ~PendingChanges.clear_set_jobscript_version_info
      ~PendingChanges.clear_set_parameters
      ~PendingChanges.clear_update_loop_indices
      ~PendingChanges.clear_update_loop_num_iters
      ~PendingChanges.clear_update_param_sources
      ~PendingChanges.commit_EAR_ends
      ~PendingChanges.commit_EAR_skips
      ~PendingChanges.commit_EAR_starts
      ~PendingChanges.commit_EAR_submission_indices
      ~PendingChanges.commit_EARs
      ~PendingChanges.commit_all
      ~PendingChanges.commit_elem_IDs
      ~PendingChanges.commit_elem_iter_EAR_IDs
      ~PendingChanges.commit_elem_iter_IDs
      ~PendingChanges.commit_elem_iters
      ~PendingChanges.commit_element_sets
      ~PendingChanges.commit_elements
      ~PendingChanges.commit_files
      ~PendingChanges.commit_jobscript_job_ID
      ~PendingChanges.commit_jobscript_submit_time
      ~PendingChanges.commit_jobscript_version_info
      ~PendingChanges.commit_loop_indices
      ~PendingChanges.commit_loop_num_iters
      ~PendingChanges.commit_loops
      ~PendingChanges.commit_param_sources
      ~PendingChanges.commit_parameters
      ~PendingChanges.commit_submission_attempts
      ~PendingChanges.commit_submissions
      ~PendingChanges.commit_tasks
      ~PendingChanges.commit_template_components
      ~PendingChanges.reset
      ~PendingChanges.where_pending
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~PendingChanges.logger
   
   